<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="16dp"
      android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="8dp"
        android:text="@string/hmusic_center"
        android:background="@drawable/underline_bg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="8dp"
        android:text="@string/hmusic_setting"
        android:background="@drawable/underline_bg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="8dp"
        android:text="@string/hmusic_logout"
        android:background="@drawable/underline_bg"
        />
</LinearLayout>
