<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_logo"
        android:id="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="19dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text="admin"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        android:ems="10"
        android:id="@+id/username"
        android:layout_marginTop="20dp"
        android:hint="@string/hmusic_username_hint"
        android:background="@drawable/redius10px" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="admin"
        android:inputType="textPassword"
        android:hint="@string/hmusic_password_hint"
        android:ems="10"
        android:textSize="20dp"
        android:id="@+id/password"
        android:paddingLeft="10dp"
        android:background="@drawable/redius10px"
        android:layout_marginTop="17dp" />

    <Button
        android:text="@string/hmusic_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
            <TextView
                android:text="@string/hmusic_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:id="@+id/register"
                android:layout_marginLeft="10dp"
                android:textColor="@color/QQblue" />

            <TextView
                android:text="@string/hmusic_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:id="@+id/forgetPassword"
                android:textColor="@color/QQblue" />

    </LinearLayout>
</LinearLayout>
