<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Register">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/line1"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="left"
            android:src="@drawable/back"
            android:id="@+id/mback"/>

    </LinearLayout>

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_logo"
        android:id="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="19dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/hmusic_username_hint"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:ems="10"
        android:background="@drawable/redius10px"
        android:id="@+id/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/hmusic_password_hint"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:background="@drawable/redius10px"
        android:id="@+id/password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="@string/hmusic_checkcode_hint"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:background="@drawable/redius10px"
            android:id="@+id/checkcode" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@mipmap/ic_logo"
            android:layout_gravity="center"
            android:layout_marginTop="10px"
            android:layout_marginLeft="20dp"
            android:foregroundGravity="center"
            android:background="@drawable/img_checkcode_bg"
            android:id="@+id/img_checkcode" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/hmusic_register_btn"
        android:layout_marginTop="20dp"
        android:id="@+id/register"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmusic_login"
        android:textColor="@color/QQblue"
        android:layout_marginTop="10dp"
        android:textSize="12dp"
        android:id="@+id/login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/circle_bg"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:id="@+id/agress_btn"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hmusic_agree"
            android:textColor="@color/QQblue"
            android:id="@+id/important"
            />
    </LinearLayout>
</LinearLayout>
