<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mdrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainMusicActivity">
    <!--主页内容-->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:weightSum="20">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/QQblue"
            android:layout_weight="1"
            android:weightSum="10">

        <ImageView
            android:id="@+id/msetting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_logo"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/app_name"
            android:layout_weight="8"
            />
        <ImageView
            android:id="@+id/msearch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_search_black"
            android:layout_weight="1"/>
    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="18">
            <ListView
                android:id="@+id/music_list_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/lightgray"
                android:dividerHeight="1dp">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>

    <!--左侧导航-->
    <LinearLayout
        android:id="@+id/slidingMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_gravity="left">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="8dp"
            android:text="@string/hmusic_center"
            android:background="@drawable/underline_bg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="8dp"
            android:text="@string/hmusic_setting"
            android:background="@drawable/underline_bg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="8dp"
            android:text="@string/hmusic_logout"
            android:background="@drawable/underline_bg"
            />
    </LinearLayout>
    <!--搜索页面-->
    <LinearLayout
        android:id="@+id/searchLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/white">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/underline_bg"
            android:padding="8dp"
            android:weightSum="10">
            <ImageView
                android:id="@+id/msearchBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_backspace"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/msearchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="xlh"
                android:paddingLeft="8dp"
                android:background="@drawable/left_border_bg"
                android:layout_weight="8"/>
            <ImageView
                android:id="@+id/msearchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>